# naut

./: .gitignore  CMakeLists.txt
assets/shaders/fragment/: vertex2D.glsl
assets/shaders/vertex/: vertex2D.glsl
src/c/: glad.c
src/cpp/: main.cpp
src/cpp/core/: camera.cpp  frustrum.cpp  keylistener.cpp  mouselistener.cpp  orthocamera.cpp  perspectivecamera.cpp  scene.cpp  window.cpp
src/cpp/io/: keylistener.cpp  mouselistener.cpp
src/cpp/renderer/: Shader.cpp  Texture.cpp  box.cpp  boxrenderer.cpp  mesh.cpp  myrenderer.cpp  primitives.cpp  shader.cpp  texture.cpp
src/cpp/utility/: assets.cpp  cmath.cpp  math.cpp
src/include/: defs.h  glm.h  types.h
src/include/core/: camera.h  camerafwd.h  frustrum.h  frustrumfwd.h  keylistener.h  keylistenerfwd.h  mouselistener.h  mouselistenerfwd.h  orthocamera.h  orthocamerafwd.h  perspectivecamera.h  perspectivecamerafwd.h  scene.h  scenefwd.h  window.h  windowfwd.h
src/include/io/: keylistener.h  mouselistener.h
src/include/renderer/: batchrenderer.h  batchrenderer.inl  batchrendererfwd.h  batchrendererimpl.inl  box.h  boxrenderer.h  material.h  mesh.h  myrenderer.h  primitives.h  primitivesfwd.h  renderer.h  rendererfwd.h  shader.h  shaderfwd.h  tesselator.h  tesselator.inl  texture.h  texturefwd.h  vertexattribute.h  vertexattributefwd.h
src/include/utility/: assets.h  cmath.h  colors.h  def.h  math.h  types.h
